# Vivace

./: .gitignore  README.md  Vivace.sln  index.html  package-lock.json  package.json  vite.config.ts
Vivace/: LockScreenGlobals.h  LockScreenRenderer.cpp  LockScreenRenderer.h  LockScreenUtils.cpp  LockScreenUtils.h  LockScreenWindow.cpp  LockScreenWindow.h  Resource.h  Vivace.cpp  Vivace.rc  Vivace.vcxproj  Vivace.vcxproj.filters  vcpkg.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: calendar_commands.rs  commands.rs  lib.rs  models.rs  settings.rs  utils.rs
src-tauri/src/calendar/: buddhist.rs  french_revolutionary.rs  gregorian.rs  jewish.rs  julian.rs  mod.rs
src/components/: .MainScreen.css  .MainScreen.tsx  CalendarScreen.css  CalendarScreen.tsx  LoginScreen.css  LoginScreen.tsx
