[package]
name = "Vivace"
version = "0.1.1"
description = "An improved lock screen for Windows"
authors = ["William"]
license = "MIT"
repository = "https://github.com/willnjohnson/Vivace"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-global-shortcut = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
whoami = "1.4"
lazy_static = "1.4"
